# tabua

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
tabua-engine/: Cargo.toml
tabua-engine/src/: lib.rs  v1.rs  v2.rs
tabua-utils/: Cargo.toml
tabua-utils/src/: card.rs  deck.rs  lib.rs
tabua-utils/src/board/: grid.rs  mod.rs  square_grid.rs
tabua-utils/src/pathfinder/: bfs.rs  dfs.rs
tictactoe/: Cargo.toml
tictactoe-dioxus/: Cargo.toml
tictactoe-dioxus/src/: main.rs
tictactoe-dioxus/src/components/: cell.rs  grid.rs  mod.rs
tictactoe-ui/: Cargo.toml
tictactoe-ui/src/: main.rs
tictactoe-ui/ui/: main.slint
tictactoe/src/: error.rs  lib.rs
