[package]
name = "tictactoe-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
slint = "0.2"
tabua-engine = { path = "../tabua-engine" }
tabua-utils = { path = "../tabua-utils" }
tictactoe = { path = "../tictactoe" }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "rt", "macros"] }