[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tabua-engine = { path = "../tabua-engine" }
tabua-utils = { path = "../tabua-utils" }
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }
